--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@rollup/plugin-replace": "^3.0.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.2.6",
     "page": "^1.11.6",
-    "sirv-cli": "^1.0.0"
+    "rollup-plugin-css-only": "^3.1.0",
+    "sirv-cli": "^1.0.0",
+    "tippy.js": "^6.3.2"
   }
 }
